[package]
name = "cargo-acap"
version = "0.1.0"
authors = ["Will Glynn <will@willglynn.com>"]
edition = "2018"
description = "A tool to build Rust programs for the AXIS Camera Application Platform."
repository = "https://github.com/trunnion/cargo-acap/"
license = "MIT OR Apache-2.0"
keywords = ["axis", "acap"]

# Cargo.toml reference: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.62"
clap = { version = "3.2", features = ["derive", "suggestions"] }
deflate = { version = "1.0", features = ["gzip"] }
rand = "0.8"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
toml = "0.5"
url = "2.2"
vapix = { version = "0.1.1-alpha.0", features = ["goblin"] }

[target."cfg(not(windows))".dependencies]
libc = "0.2"
